<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.fragments.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="32dp"
        android:descendantFocusability="blocksDescendants">

        <ImageView
            android:id="@+id/header"
            android:background="@drawable/bg"
            android:layout_height="220dp"
            android:elevation="9dp"
            android:layout_width="match_parent"
            android:contentDescription="@string/description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/text_detail_name_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="36dp"
            android:textSize="30sp"
            android:text="Pokemon"
            android:translationZ="100dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_detail_id_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="22sp"
            android:text="#001"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginTop="28dp"
            android:translationZ="100dp"
            android:textColor="@color/white"
            />

        <ImageView
            android:id="@+id/image_detail_pokemon"
            android:layout_width="@dimen/detail_image_dimension"
            android:layout_height="@dimen/detail_image_dimension"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:contentDescription="@string/description"
            android:scaleType="fitXY"
            android:translationZ="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_detail_name_pokemon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:text="001"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail_pokemon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:text="0.5 M"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.577"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/image_detail_pokemon" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_horizontal"
            android:layout_marginEnd="32dp"
            android:text="28.0 kg"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail_pokemon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="National ID"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:text="@string/weight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/text_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:text="@string/hp"
            android:textSize="@dimen/text_size_stats"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:textStyle="bold"
            android:text="@string/atk"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:textStyle="bold"
            android:text="@string/def"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:textStyle="bold"
            android:text="@string/satk"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:textStyle="bold"
            android:text="@string/sdef"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal"
            android:textStyle="bold"
            android:text="@string/spd"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/text_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/stats_value"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/text_atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_value"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/text_hp" />

        <TextView
            android:id="@+id/text_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_value"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/text_atk" />

        <TextView
            android:id="@+id/text_satk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_value"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/text_def" />

        <TextView
            android:id="@+id/text_sdef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_value"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/text_satk" />

        <TextView
            android:id="@+id/text_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_value"
            android:layout_marginTop="@dimen/margin_top_stats"
            android:textSize="@dimen/text_size_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/text_sdef" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>